--- a/ReproductorDesktop/nbproject/private/private.properties
+++ b/ReproductorDesktop/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
-user.properties.file=/home/yeferal/.netbeans/12.4/build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.JFlex.jar=C:\\Users\\Usuario\\Documents\\University_Courses\\JFlex.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
