--- a/ReproductorDesktop/nbproject/project.properties
+++ b/ReproductorDesktop/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ReproductorDesktop
+application.vendor=Usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,18 @@ dist.jar=${dist.dir}/ReproductorDesktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ReproductorDesktop
+endorsed.classpath=
 excludes=
-file.reference.java-cup-11a.jar=/home/yeferal/Documentos/Compi/java-cup-11a.jar
+file.reference.java-cup-11b-runtime.jar=Librerias\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=Librerias\\java-cup-11b.jar
 file.reference.JFlex.jar=/home/yeferal/Documentos/Compi/JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JFlex.jar}:\
-    ${file.reference.java-cup-11a.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
